codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_trimmed_snapshot(&pane, area)"
---
· Working (0s • esc to interrupt)

• Queued follow-up inputs
  ↳ Queued follow-up question
    ⌥ + ↑ edit last queued message

› Ask Codex to do anything

  ? for shortcuts            100% context left
